[package]
name = "ssra"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
repository = "https://github.com/mkeeter/ssra"
homepage = "https://mattkeeter.com/blog/2022-xx-xx-ssra"
description = "Didactic implementation of the Solid-State Register Allocator"
readme = "README.md"

[dependencies]
arrayvec = "0.7.2"
console_error_panic_hook = "*"
wasm-bindgen = "^0.2"

[lib]
crate-type = ["cdylib"]
